crates/ccargo-cc-test/tests/outputs/windows/gcc/plain/compile_error.stderr.out
error: void value not ignored as it ought to be
   --> main.c:4:13 in function `'main'`
     int x = func();
             ^~~~
error: void value not ignored as it ought to be
   --> main.c:5:13 in function `'main'`
     int y = func();
             ^~~~
